# june_2024

./: .gitignore  README.md  notes.txt
GeeksForGeeks/: data_processing.py
PyNotePad/: create_elements.py  file_writing.py  frames_tkinter.py  main.py  tkin_samples.py
UI/: medium.html  text_case.html
jobs/school_scheduling_widget/: Subjects.py  main.py  permutation_example_2.py  permutations_example.py  permutations_example_3.py  requirements.py  rough_one.py
poetry_demo/demo_project/: pyproject.toml
poetry_demo/demo_project/demo_project/: app.py
python_scripts/: fetch_medium.py  hi_anime_home.txt  scrap_code.py  utils.py  web_creawling.py
python_scripts/ML/: data_preprocessing_sample_1.py
python_scripts/shooter/: main.py
react/: notes.txt  simple_js_file.js
react/demo_app/: package-lock.json
react/demo_app/src/: App.js
